text alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,21 @@
 body {
     margin: 0;
+    padding: 0px;
     background-color: #f0f0f0;
     padding-left: 80px;
     font-family: 'Lato', sans-serif;
-    font-weight: 400;
 }
 
-.header {
-    font-size: 21px;
+h1 {
+    font-size: 32px;
     text-align: left;
-    padding: 20px;
     padding-top: 50px;
-    padding-bottom: 25px;
+    color: #6d3b3b;
 }
 
-.header h1 {
-    margin: 0;
-    color: #6d3b3b;
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 .nav {
@@ -24,49 +23,47 @@ body {
     font-size: 21px;
     text-align: left;
     margin-top: 10px;
-    padding-left: 20px;
 }
 
 .nav a {
     color: #3f1010;
     text-decoration: none;
-    margin-right: 24px; /* Space between links */
+    margin-right: 24px;
     font-size: 24px;
 }
 
 .nav a:hover {
-    text-decoration: underline; /* Adds an underline when you hover over a link */
+    text-decoration: underline;
 }
-
-
 
 .about-me {
     display: flex;
     align-items: center; /* Vertically centers the image and text */
-    padding: 20px;
+    text-align: justify;
+    max-width: 1200px;
+    font-size: 18px;
+    margin-top: 20px;
+    color: #3f1010;
 }
 
 .profile-picture {
-    width: 350px; /* Adjust the width as needed */
-    height: 350px; /* Keeps the aspect ratio */
-    border-radius: 175px;
-    object-fit: cover;
-    border: 1px solid #3f1010;;
+    width: 350px !important;
+    height: 350px !important;
+
+    border: 1px solid;
+    border-color: #3f1010;
     border-radius: 50%;
+    object-fit: cover;
     margin-left: 85px; /* Space between the picture and text */
 }
 
 .profile-description {
-    text-align: justify;
-    color: #3f1010;
     max-width: 55%; /* Adjust the width as needed */
-    font-size: 18px; /* Adjust the font size as needed */
 }
 
 .projects {
-    font-size: 18px;
     text-align: left;
-    padding: 20px;
+    font-size: 18px;
 }
 
 .projects h2 {
